--- a/src/style.scss
+++ b/src/style.scss
@@ -21,11 +21,11 @@ $LightGreen: #b9e7e7;
       background-color: $LightGreen;
     }
 
-    h1 {
-      font-size: 20px;
-      color: teal;
-      margin-bottom: 20px;
-    }
+    // h1 {
+    //   font-size: 20px;
+    //   color: teal;
+    //   margin-bottom: 20px;
+    // }
 
     form {
       display: flex;
@@ -51,11 +51,11 @@ $LightGreen: #b9e7e7;
       color: white;
     }
 
-    p {
-      font-size: 12px;
-      color: red;
-      text-align: center;
-    }
+    // p {
+    //   font-size: 12px;
+    //   color: red;
+    //   text-align: center;
+    // }
 
     span {
       font-size: 12px;
@@ -195,5 +195,74 @@ footer {
         }
       }
     }
+  }
+}
+
+//SINGLE
+
+.single {
+  display: flex;
+  gap: 50px;
+
+  .content {
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+
+    .user {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
+      .info {
+        .postDate {
+          text-align: start;
+          margin: 0;
+          color: black;
+        }
+
+        span {
+          font-weight: bold;
+        }
+      }
+
+      .edit {
+        display: flex;
+        gap: 5px;
+
+        img {
+          width: 20px;
+          height: 20px;
+          cursor: pointer;
+        }
+      }
+
+      h1 {
+        font-size: 42px;
+        color: black;
+      }
+
+      p {
+        text-align: justify;
+        line-height: 30px;
+      }
+    }
+  }
+  .menu {
+    flex: 2;
   }
 }
