Menu Page has been developed.

--- a/src/style.scss
+++ b/src/style.scss
@@ -262,7 +262,12 @@ footer {
       }
     }
   }
-  .menu {
-    flex: 2;
-  }
+
+}
+
+//MENU 
+.menu {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
 }
