--- a/src/style.scss
+++ b/src/style.scss
@@ -262,12 +262,35 @@ footer {
       }
     }
   }
-
 }
 
-//MENU 
+//MENU
 .menu {
   flex: 2;
   display: flex;
   flex-direction: column;
+  gap: 25px;
+
+  h1 {
+    .otherPost {
+      font-size: 20px;
+      color: #555;
+      margin-top: 0;
+    }
+  }
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    // .otherPostTitle {
+    // }
+
+    img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+  }
 }
