Write Page has been modified.

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,8 +5,8 @@ $LightGreen: #b9e7e7;
   justify-content: center;
   .container {
     width: 1024px;
-    //LOGIN & REGISTER
 
+    //LOGIN & REGISTER
     .link {
       text-decoration: none;
       color: inherit;
@@ -19,278 +19,358 @@ $LightGreen: #b9e7e7;
       justify-content: center;
       height: 100vh;
       background-color: $LightGreen;
-    }
 
-    // h1 {
-    //   font-size: 20px;
-    //   color: teal;
-    //   margin-bottom: 20px;
-    // }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      padding: 50px;
-      background-color: white;
-      width: 200px;
-      gap: 20px;
-    }
-
-    input {
-      padding: 10px;
-      border: none;
-      border-bottom: 1px solid gray;
-    }
-
-    button {
-      padding: 10px;
-      border: none;
-      background-color: teal;
-      border-radius: 10px;
-      cursor: pointer;
-      color: white;
-    }
-
-    // p {
-    //   font-size: 12px;
-    //   color: red;
-    //   text-align: center;
-    // }
-
-    span {
-      font-size: 12px;
-      text-align: center;
-    }
-  }
-}
-
-// NAVBAR
-
-.navbar {
-  .container {
-    padding: 10px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .logo {
-      img {
-        width: 120px;
-      }
-    }
-    .links {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-    }
-    h6 {
-      font-size: 16px;
-      font-weight: 300;
-    }
-    span {
-      cursor: pointer;
-    }
-    .write {
-      background-color: $LightGreen;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 300;
-      border: 1px solid white;
-
-      &:hover {
+      h1 {
+        font-size: 20px;
         color: teal;
-        background-color: white;
-        border: 1px solid teal;
-      }
-    }
-  }
-}
-
-//FOOTER
-
-footer {
-  margin-top: 100px;
-  padding: 20px;
-  background-color: $LightGreen;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 12px;
-  img {
-    height: 50px;
-  }
-}
-
-//HOME
-
-.home {
-  .posts {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 150px;
-
-    .post {
-      display: flex;
-      gap: 100px;
-
-      &:nth-child(2n + 1) {
-        flex-direction: row-reverse;
+        margin-bottom: 20px;
       }
 
-      .img {
-        flex: 2;
-        position: relative;
-
-        &::after {
-          content: "";
-          width: 100%;
-          height: 100%;
-          background-color: $LightGreen;
-          position: absolute;
-          top: 20px;
-          left: -20px;
-          z-index: -1;
-        }
-
-        img {
-          width: 100%;
-          max-height: 400px;
-          object-fit: cover;
-        }
-      }
-
-      .content {
-        flex: 3;
+      form {
         display: flex;
         flex-direction: column;
+        padding: 50px;
+        background-color: white;
+        width: 200px;
+        gap: 20px;
+      }
+
+      input {
+        padding: 10px;
+        border: none;
+        border-bottom: 1px solid gray;
+      }
+
+      button {
+        padding: 10px;
+        border: none;
+        background-color: teal;
+        border-radius: 10px;
+        cursor: pointer;
+        color: white;
+      }
+
+      p {
+        font-size: 12px;
+        color: red;
+        text-align: center;
+      }
+
+      span {
+        font-size: 12px;
+        text-align: center;
+      }
+    }
+
+    // NAVBAR
+    .navbar {
+      .container {
+        padding: 10px 0px;
+        display: flex;
+        align-items: center;
         justify-content: space-between;
-
-        .desc {
-          text-align: left;
-          font-size: 10px;
+        .logo {
+          img {
+            width: 120px;
+          }
         }
-
-        h1 {
-          font-size: 18px;
+        .links {
+          display: flex;
+          gap: 10px;
+          align-items: center;
         }
-
-        button {
-          width: max-content;
-          padding: 10px 20px;
-          border: none;
+        h6 {
+          font-size: 16px;
+          font-weight: 300;
+        }
+        span {
           cursor: pointer;
-          background-color: white;
-          border: 1px solid teal;
-          color: teal;
+        }
+        .write {
+          background-color: $LightGreen;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-weight: 300;
+          border: 1px solid white;
 
           &:hover {
-            border: 1px solid white;
-            background-color: $LightGreen;
-            color: black;
+            color: teal;
+            background-color: white;
+            border: 1px solid teal;
           }
         }
       }
     }
-  }
-}
 
-//SINGLE
-
-.single {
-  display: flex;
-  gap: 50px;
-
-  .content {
-    flex: 5;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-
-    img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-
-    .user {
+    //FOOTER
+    footer {
+      margin-top: 100px;
+      padding: 20px;
+      background-color: $LightGreen;
       display: flex;
       align-items: center;
-      gap: 10px;
-      font-size: 14px;
+      justify-content: space-between;
+      font-size: 12px;
       img {
-        width: 50px;
         height: 50px;
-        border-radius: 50%;
-        object-fit: cover;
       }
+    }
 
-      .info {
-        .postDate {
-          text-align: start;
-          margin: 0;
-          color: black;
-        }
-
-        span {
-          font-weight: bold;
-        }
-      }
-
-      .edit {
+    //HOME
+    .home {
+      .posts {
+        margin-top: 50px;
         display: flex;
-        gap: 5px;
+        flex-direction: column;
+        gap: 150px;
+
+        .post {
+          display: flex;
+          gap: 100px;
+
+          &:nth-child(2n + 1) {
+            flex-direction: row-reverse;
+          }
+
+          .img {
+            flex: 2;
+            position: relative;
+
+            &::after {
+              content: "";
+              width: 100%;
+              height: 100%;
+              background-color: $LightGreen;
+              position: absolute;
+              top: 20px;
+              left: -20px;
+              z-index: -1;
+            }
+
+            img {
+              width: 100%;
+              max-height: 400px;
+              object-fit: cover;
+            }
+          }
+
+          .content {
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .desc {
+              text-align: left;
+              font-size: 10px;
+            }
+
+            h1 {
+              font-size: 18px;
+            }
+
+            button {
+              width: max-content;
+              padding: 10px 20px;
+              border: none;
+              cursor: pointer;
+              background-color: white;
+              border: 1px solid teal;
+              color: teal;
+
+              &:hover {
+                border: 1px solid white;
+                background-color: $LightGreen;
+                color: black;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    //SINGLE
+    .single {
+      display: flex;
+      gap: 50px;
+
+      .content {
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
 
         img {
-          width: 20px;
-          height: 20px;
-          cursor: pointer;
+          width: 100%;
+          height: 300px;
+          object-fit: cover;
+        }
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-size: 14px;
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          .info {
+            .postDate {
+              text-align: start;
+              margin: 0;
+              color: black;
+            }
+
+            span {
+              font-weight: bold;
+            }
+          }
+
+          .edit {
+            display: flex;
+            gap: 5px;
+
+            img {
+              width: 20px;
+              height: 20px;
+              cursor: pointer;
+            }
+          }
+
+          h1 {
+            font-size: 42px;
+            color: black;
+          }
+
+          p {
+            text-align: justify;
+            line-height: 30px;
+          }
+        }
+      }
+    }
+
+    //MENU
+    .menu {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+
+      h1 {
+        .otherPost {
+          font-size: 20px;
+          color: #555;
+          margin-top: 0;
         }
       }
 
-      h1 {
-        font-size: 42px;
-        color: black;
-      }
+      .post {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
-      p {
-        text-align: justify;
-        line-height: 30px;
+        // .otherPostTitle {
+        // }
+
+        img {
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+        }
       }
     }
-  }
-}
 
-//MENU
-.menu {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+    // WRITE
+    .add {
+      margin-top: 20px;
+      display: flex;
+      gap: 20px;
 
-  h1 {
-    .otherPost {
-      font-size: 20px;
-      color: #555;
-      margin-top: 0;
-    }
-  }
+      .content {
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
 
-  .post {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+        input {
+          padding: 10px;
+          border: 1px solid lightgray;
+        }
 
-    // .otherPostTitle {
-    // }
+        .editorContainer {
+          height: 300px;
+          overflow: scroll;
+          border: 1px solid lightgray;
+        }
 
-    img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
+        .editor {
+          height: 100%;
+          border: none;
+        }
+      }
+
+      .menu {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .item {
+          border: 1px solid lightgray;
+          padding: 10px;
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          font-size: 12px;
+          color: #555;
+
+          h1 {
+            font-size: 20px;
+          }
+
+          .file {
+            text-decoration: underline;
+          }
+
+          .buttons {
+            display: flex;
+            justify-content: space-between;
+
+            :first-child {
+              cursor: pointer;
+              color: teal;
+              background-color: white;
+              border: 1px solid teal;
+              padding: 3px 5px;
+            }
+
+            :last-child {
+              cursor: pointer;
+              color: white;
+              background-color: teal;
+              border: 1px solid teal;
+              padding: 3px 5px;
+            }
+          }
+
+          .cat {
+            display: flex;
+            align-items: center;
+            gap: 2px;
+            color: teal;
+          }
+        }
+      }
     }
   }
 }
