--- a/src/style.scss
+++ b/src/style.scss
@@ -70,6 +70,8 @@ $LightGreen: #b9e7e7;
         align-items: center;
         justify-content: space-between;
         .logo {
+          cursor: pointer;
+          
           img {
             width: 120px;
           }
